# honeycloud

./: .env.example  .gitignore  AUTHENTICATION_QUICK_REFERENCE.md  AUTHENTICATION_UPGRADE_COMPLETE.md  DEPLOYMENT.md  Makefile  README.md  README_AUTHENTICATION_UPGRADE.md  TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml  project_plan_report.md  requirements.txt  simulate_attacks.py
.github/workflows/: deploy.yml
backend/: Dockerfile  requirements.txt
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: auth.rs  config.rs  db.rs  handlers.rs  honeypots.rs  main.rs  mitre.rs  ml.rs  models.rs  services.rs  websocket.rs
backend-rust/static/: index.html  trap.html
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py  websocket_manager.py
backend/app/db/: session.py
backend/app/honeypots/: __init__.py  base.py  ftp_honeypot.py  http_honeypot.py  rdp_honeypot.py  smtp_honeypot.py  ssh_honeypot.py  telnet_honeypot.py
backend/app/ml/: detector.py  features.py  rf_detector.py
backend/app/models/: alert.py  attack_event.py  attacker_profile.py  audit_log.py  mitre_mapping.py  report.py  role.py  threat_score.py  token_blacklist.py  user.py
backend/app/repositories/: alert_repository.py  analytics_repository.py  audit_repository.py  (+7 more)
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_events.py  test_ml.py  test_profiler.py  test_profiles.py  test_security.py
frontend/: Dockerfile  dashboard.html  index.html  login.html  nginx.conf  trap.html
(+25 files in other folders)
