[package]
name = "honeycloud-backend"
version = "2.0.0"
edition = "2021"

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }

# Serialization & Chrono
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }

# Database (SQLx with PostgreSQL)
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Cryptography & Security
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4"] }

# HTTP client & Alerts
reqwest = { version = "0.12.4", features = ["json"] }
lettre = { version = "0.11.7", features = ["tokio-1-native-tls"] }

# Utilities
regex = "1.10.4"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
